# mem

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  EPIC-memory-improvements.md  INVENTORY.md  LICENSE  Makefile  README.md  app_dump.rs  app_dump_2.rs  baseline_tokens.md  benchmark.py  bug_report_comment.md  build.rs  final_tokens.md  graph.json  install.sh  layout.toml  release-please-config.json  release-plz.toml  reproduction_test.rs  test_yaml.rs
.agent/: CORE.md
.agents/: INDEX.md  context-map.json
.antigravitycli/: 9ab4f4ee-1b9c-4daa-96be-d368c7d2f384.json
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/agents/: auditor.agent.md  autofix.agent.md  custodiet.agent.md  enforcer.agent.md  merge-prep.agent.md  pr-reviewer.agent.md  qa.agent.md
.github/workflows/: agent-auditor.yml  agent-autofix.yml  agent-enforcer.yml  agent-merge-prep.yml  build-release.yml  ci.yml  manual-release.yml  merge-prep-cron.yml  pr-pipeline.yml  pr-review.yml  publish-image.yml  release-please.yml  release-plz.yml  release.yml
containers/pkb/: entrypoint.sh  git-sync-loop.sh  git-sync.sh
docs/specs/: batch-graph-operations.md  planning-web.md  session-handover-yaml.md  task-focus-scoring.md  theme-guide.md  view-assumptions.md  view-dashboard.md  view-duplicates.md  view-epic-tree.md  view-focus.md  view-graph.md  view-metro.md  view-node-detail.md
examples/: bench_handlers.rs  bench_update_task.rs
examples/cross-repo-shim/: README.md
examples/templates/: daily.md
overwhelm-dashboard/: .gitignore  DESIGN.md  README.md  package-lock.json  package.json  playwright.config.ts  spec.md  treemap_spectral_1.html  treemap_spectral_2.html  treemap_spectral_3.html  vite.config.ts
overwhelm-dashboard/docs/: FORCE-VIEW-HANDOFF.md  data-pipeline.md
overwhelm-dashboard/playwright-report/: index.html
overwhelm-dashboard/qa/: qa-dashboard.mjs  qa-deploy-version.mjs  qa-deployed-check.mjs  qa-fixedcheck.mjs  qa-qchtml.mjs  qa-scroll-fix.mjs  qa-targeted.mjs  qa-visual-review.mjs  qa-visual-review2.mjs  svelte-dashboard-qa-results-2026-03-07.md  treemap-metrics.jsonl  treemap-qa-final-2026-03-11.md  treemap-qa-regression-2026-03-11.md
overwhelm-dashboard/qa/overwhelm/: ANALYSIS-2026-04-12.md
overwhelm-dashboard/src/: app.css  app.html
overwhelm-dashboard/src/lib/components/: Sidebar.svelte
overwhelm-dashboard/src/lib/components/dashboard/: ActiveSessions.svelte  (+7 more)
overwhelm-dashboard/src/lib/data/: assigneeUtils.ts  constants.ts  focusEmphasis.ts  nodeAffordances.ts  nodeSize.ts  prepareGraphData.ts  projectUtils.ts  subgraphExtraction.ts  taxonomy.ts  utils.ts
overwhelm-dashboard/src/lib/server/: pkb.test.ts  pkb.ts
overwhelm-dashboard/src/lib/stores/: filters.ts  graph.ts  queueActions.ts  selection.ts  taskOperations.ts  toast.ts  viewSettings.ts  zoom.ts
overwhelm-dashboard/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
overwhelm-dashboard/test-results/: .last-run.json
overwhelm-dashboard/tests/: nav_check.spec.ts  screenshots.spec.ts  treemap-quality.spec.ts  verify_graph.spec.ts
references/: TAXONOMY.md
scripts/: inventory.py  push-vectors.sh  tui-capture.sh
specs/: areas-not-projects.md  batch-graph-operations.md  context-map-schema.md  crud-audit.md  crud-redesign.md  multi-parent.md  mutation-neighborhood.md  pkb-server-spec.md  pkb-type-taxonomy.md  planning-web.md  typed-facts.md  work-management.md
src/: cli.rs  distance.rs  document_crud.rs  embeddings.rs  eval.rs  facts.rs  graph.rs  graph_display.rs  graph_store.rs  layout.rs  lib.rs  lint.rs  main.rs  mcp_server.rs  metrics.rs  migrations.rs  pkb.rs  polecat_config.rs  reproduction.rs  reproduction_snippet.rs  server.rs  task_crud.rs  task_index.rs  telemetry.rs  vectordb.rs
src/batch_ops/: duplicates.rs  epics.rs  filters.rs  mod.rs  reclassify.rs  reparent.rs  similarity.rs  stats.rs  update.rs
src/tui/: app.rs  main.rs  mod.rs  theme.rs
src/tui/views/: capture.rs  dashboard.rs  detail.rs  epic_tree.rs  focus.rs  graph_view.rs  help.rs  mod.rs  search.rs  status_bar.rs
tests/: cli_default_ordering.rs  crud_replay.rs  decompose_task_indexing.rs  mcp_integration.rs  parent_validation.rs  repro_issue.rs  target_parent_guard.rs  tree_test.rs
tools/: layout-preview.html
(+43 files in other folders)
