[package]
name = "mem"
version = "0.1.0"
edition = "2021"
description = "Fast-indexer and PKB semantic search MCP server"

[[bin]]
name = "fast-indexer"
path = "src/main.rs"

[[bin]]
name = "pkb-search"
path = "src/server.rs"

[features]
default = []
# Enable ONNX-based embeddings (requires rustc 1.88+)
onnx = ["ort", "tokenizers", "ndarray"]

[dependencies]
# MCP Protocol
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Core
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Markdown frontmatter parsing
gray_matter = "0.2"

# File walking (gitignore-aware)
ignore = "0.4"

# Filesystem watching
notify = "7"
notify-debouncer-mini = "0.5"

# ONNX Runtime for MiniLM embeddings (optional, requires rustc 1.88+)
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic", "half"], optional = true }
tokenizers = { version = "0.20", default-features = false, features = ["onig"], optional = true }
ndarray = { version = "0.16", optional = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
md5 = "0.7"
rayon = "1"
ordered-float = "4"
dirs = "5"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Model download (for ONNX feature)
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"

# Schemars for MCP tool params
schemars = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
