[package]
name = "mem"
version = "0.2.26"
edition = "2021"
rust-version = "1.88"
license = "GPL-3.0-or-later"
description = "Fast-indexer and PKB semantic search MCP server"
repository = "https://github.com/nicsuzor/mem"

[lib]
name = "mem"
path = "src/lib.rs"

[[bin]]
name = "pkb"
path = "src/server.rs"

[[bin]]
name = "aops"
path = "src/cli.rs"


[dependencies]
# MCP Protocol
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Core
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Markdown frontmatter parsing
gray_matter = "0.2"

# File walking (gitignore-aware)
ignore = "0.4"

# Filesystem watching
notify = "7"
notify-debouncer-mini = "0.5"

# ONNX Runtime for BGE-M3 embeddings
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic", "half", "cuda"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.16"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
md5 = "0.7"
blake3 = "1"
rand = "0.9"
rayon = "1"
ordered-float = "4"
dirs = "5"
parking_lot = "0.12"
terminal_size = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Model download
ureq = { version = "2", features = ["json"] }
flate2 = "1"
tar = "0.4"

# Schemars for MCP tool params
schemars = "0.8"
indicatif = "0.18.4"
serde_yaml = "0.9"
toml = "0.8"

# TUI
ratatui = "0.29"

[package.metadata.binstall]
pkg-url = "https://github.com/nicsuzor/mem/releases/download/v{ version }/mem-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "https://github.com/nicsuzor/mem/releases/download/v{ version }/mem-v{ version }-aarch64-darwin.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "https://github.com/nicsuzor/mem/releases/download/v{ version }/mem-v{ version }-x86_64-linux.tar.gz"

[dev-dependencies]
tempfile = "3"

# Fast incremental debug builds (the default `cargo run` profile)
[profile.dev]
opt-level = 0
debug = true          # full debug info for backtraces

# Optimized release builds for distribution
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
